# log_generation

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: log_generation.yaml
data/tree_geo_bk/: knots.json  pith.json
data/tree_geo_random/: geo_knots.json  geo_pith.json  geo_radii.json  map_params.json
data/tree_statistics/: tree_data_statistics.json
data/tree_statistics/gmm_models/: aic_dim1.pkl  aic_dim2.pkl  aic_dim3.pkl  aic_dim4.pkl  aic_dim6.pkl  aic_dim7.pkl  aic_dim8.pkl  aic_dim9.pkl  bic_dim1.pkl  bic_dim4.pkl  bic_dim5.pkl  bic_dim9.pkl  single_dim1.pkl  single_dim2.pkl  single_dim3.pkl  single_dim6.pkl  single_dim7.pkl  single_dim8.pkl  single_dim9.pkl
data/wood_color_maps_original/: wood_bar_color.bmp~
src/: color_maps.py  compute_statistics.py  create_dataset.py  geometry_generator.py  main.frag  main.py  random_walk.py  tiff.py  visualizer.py  volume_generator.py
